Made css changes for fixed sections on mobile

--- a/css/trillium.css
+++ b/css/trillium.css
@@ -216,7 +216,7 @@ a {
 
 @media only screen and (min-width: 768px) {
 	.fixed {
-			min-height: 100%;
+			min-height: 70%;
 	}
 }
 
